--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
     <body>
         <script type="text/javascript">
             $(document).ready(function(){
-                var socket = io.connect('https://tachpython.herokuapp.com:5000');
+                var socket = io.connect('https://174.129.221.117:5000');
                 socket.on('connect', function(){
                    socket.send('Client connected.');
                 });
