--- a/templates/chat.html
+++ b/templates/chat.html
@@ -26,7 +26,8 @@
             var roomname = window.location.pathname.slice(10,18);
 
             $(document).ready(function(){
-                var socket = io.connect('https://' + document.domain + ':5000');
+                var socket = io.connect(window.location.href);
+                alert(window.location.href);
                 socket.on('connect', function(){
                    socket.send('Client connected.');
                 });
