--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,8 @@
     <body>
         <script type="text/javascript">
             $(document).ready(function(){
-                var socket = io.connect('https://' + document.domain + ':5000');
+                var socket = io.connect(window.location.href);
+                alert(window.location.href);
                 socket.on('connect', function(){
                    socket.send('Client connected.');
                 });
