--- a/templates/chat.html
+++ b/templates/chat.html
@@ -26,7 +26,7 @@
             var roomname = window.location.pathname.slice(10,18);
 
             $(document).ready(function(){
-                var socket = io.connect('https://' + document.domain + ':' + location.port + namespace);
+                var socket = io.connect('https://tahcpython.herokuapp.com:5000');
                 alert(window.location.href);
                 socket.on('connect', function(){
                    socket.send('Client connected.');
